# konsole_plasmoid

./: CMakeLists.txt  README  konsoleapplet.cpp  konsoleapplet.h  plasma-konsole-default.desktop
